使用全局消息

--- a/docs/开发笔记/v0.1.0.md
+++ b/docs/开发笔记/v0.1.0.md
@@ -14,3 +14,16 @@ pnpm install --registry=https://registry.npmmirror.com
 包管理工具使用pnpm
 
 新增示例项目（example）用于手动验证，用 pnpm 安装依赖并构建一次。只有这一个示例，example本身就是一个项目。采用React router进行页面导航。整体是那种科技感的，首页是网址导航。先演示tech科技风消息通知组件的用法。
+
+
+## 全局消息
+改进 src/tech 科技风主题的消息组件，移除原来配置化的用法，改进为全局消息组件的用法。example 示例也需要跟着修改。要支持 import toast from "yggjs_rtoast/tech" 这种用法。然后直接在任何地方调用 toast.success, toast.error toast.info toast.warning toast.debug 来提示消息。
+
+
+## 改进示例
+example 示例代码需要优化一下。只保留首页和科技消息示例页。首页是网址导航，点击导航项，新开一个tab打开新的页面演示科技消息示例页。
+
+pnpm --dir example install --force
+pnpm -C example dev
+
+
