--- a/docs/开发笔记/v0.1.0.md
+++ b/docs/开发笔记/v0.1.0.md
@@ -27,3 +27,16 @@ pnpm --dir example install --force
 pnpm -C example dev
 
 
+## 文档
+编写 docs/使用教程/v0.1.0/使用教程.md 大纲如下：
+- 项目介绍
+- 安装
+- 科技主题
+- 示例代码
+- 代码解释
+- 属性
+- 方法
+- 总结
+
+
+这是一个Github项目，请你概览一下项目和文档，修改并完善 README.md ，提供中英文两个版本，默认使用英文
