--- a/docs/开发笔记/v0.1.0.md
+++ b/docs/开发笔记/v0.1.0.md
@@ -40,3 +40,8 @@ pnpm -C example dev
 
 
 这是一个Github项目，请你概览一下项目和文档，修改并完善 README.md ，提供中英文两个版本，默认使用英文
+
+
+## 打包优化
+你要确保 npm publish 发布以后，当没有dist目录的时候，示例代码依然能够准确无误的运行。
+你要亲自执行相关的命令，直到整个项目跑通。
