--- a/docs/开发笔记/v1.0.2/开发笔记 v1.0.2.md
+++ b/docs/开发笔记/v1.0.2/开发笔记 v1.0.2.md
@@ -19,6 +19,20 @@
 你作为专业的前端工程师，请将项目的打包方式换成npm。
 要确保组件库能正常打包和测试，示例代码也能正常运行。
 
+## 执行tech主题改进计划
+你作为专业的前端工程师，按照 docs/开发笔记/v1.0.2/tech主题改进计划.md 进行开发。
+遵循TDD的开发规范。
+要保证所有的测试用例都通过，没有任何错误和警告。
+要保证所有类型检查都通过，没有任何错误。
+
+## 使用中文注释
+你是一个专业的前端工程师，精通React框架的使用。
+将所有的注释都换成中文注释，所有的文档注释都换成中文的文档注释。
+遵循TDD的开发规范。
+要保证所有的测试用例都通过，没有任何错误和警告。
+要保证所有类型检查都通过，没有任何错误和警告。
+要保证所有的Eslint检查都通过，没有任何错误和警告。
+
 ## 打包测试
 ```bash
 # 打包
