使用中文注释

--- a/docs/开发笔记/v1.0.2/开发笔记 v1.0.2.md
+++ b/docs/开发笔记/v1.0.2/开发笔记 v1.0.2.md
@@ -33,6 +33,23 @@
 要保证所有类型检查都通过，没有任何错误和警告。
 要保证所有的Eslint检查都通过，没有任何错误和警告。
 
+## css in js 优化
+你是一个专业的前端工程师，精通React框架的使用。
+需要你改进组件中css的使用，改造为css in js的方式，要以提高性能为第一目标。
+遵循TDD的开发规范。
+要保证所有的测试用例都通过，没有任何错误和警告。
+要保证所有类型检查都通过，没有任何错误和警告。
+要保证所有的Eslint检查都通过，没有任何错误和警告。
+
+## 打包优化
+你是一个专业的前端工程师，精通React框架的使用。
+需要你改进项目的打包方式，要提高性能为第一目标，尽可能降低包的大小。
+遵循TDD的开发规范。
+要保证所有的测试用例都通过，没有任何错误和警告。
+要保证所有类型检查都通过，没有任何错误和警告。
+要保证所有的Eslint检查都通过，没有任何错误和警告。
+
+
 ## 打包测试
 ```bash
 # 打包
