生成使用文档

--- a/docs/开发笔记/v1.0.2/开发笔记 v1.0.2.md
+++ b/docs/开发笔记/v1.0.2/开发笔记 v1.0.2.md
@@ -49,6 +49,10 @@
 要保证所有类型检查都通过，没有任何错误和警告。
 要保证所有的Eslint检查都通过，没有任何错误和警告。
 
+## 生成使用文档
+你是一个专业的前端工程师+产品经理，精通React框架的使用。
+请你为本项目写一份详细的使用教程，面向小白的，要清晰易懂，简单易读，但是要详细和完整。
+将生成的文档写入 docs/使用教程/v1.0.2/React消息通知框架使用教程.md
 
 ## 打包测试
 ```bash
@@ -73,3 +77,17 @@ npm install
 # 启动服务
 npm run dev
 ````
+
+## 发布和验证
+发布：
+```bash
+npm run build
+npm publish
+```
+
+验证：
+```bash
+cd example
+npm install
+npm run dev
+```
